--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BibliotecaContext": "Server=silly.db.elephantsql.com;Port=5432;Userid=wwurvpaj;Password=YPNGjSPLKoMHjxOEjRVt9x1M4fQAb2i1;Database=wwurvpaj"
+  }
 }
